# const-buffer

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  tests.rs
